Module-ize and rename.

--- a/README.rdoc
+++ b/README.rdoc
@@ -4,5 +4,33 @@ akismet_party is a wrapper for the {Akismet}[http://www.akismet.com] spam servic
 
 First, authorize with your API key
 
-  Akismet.authorize 'your url', 'yourapikey'
+  AkismetParty.authorize 'your url', 'yourapikey'
   
+You can add Akismet to any class by including the module
+
+  class Comment
+    include Akismet
+    attr_accessor :comment_author
+  end
+  
+By including the Akismet module, all instance variables of that class get an is_spam? method.  is_spam? returns a boolean or raise an exception in the case you've misconfigured something.
+
+When is_spam? is called, the object will be inspected for the following attributes:
+
+  user_ip (required)
+  user_agent (required)
+  referrer
+  permalink
+  comment_type
+  comment_author
+  comment_author_url
+  comment_content
+  
+Refer to [http://akismet.com/development/api/] for more information about the parameters.
+
+For example:
+
+  >> comment = Comment.new :comment_author=>'viagra-test-123'
+  => #<Comment:0x1015286e8 @comment_author='viagra-test-123'>
+  >> comment.is_spam?
+  => true
